# htmlparsert

./: README.md  pyproject.toml
htmlparsert/: __init__.py  parser.py
tests/: test_parser.py
