[tool.poetry]
name = "htmlparsert"
version = "0.1.0"
description = "A lightweight, no dependency HTML parser for text processing"
authors = ["Yohei Tamura <tamuhey@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
